update gitignore / fix personal webpage url

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "author": {
     "name": "Fakiolas Marios",
     "email": "m.fakiolas@hotmail.gr",
-    "url": "https://medium.com/@fakiolinho"
+    "url": "https://about.me/marios.fakiolas"
   },
   "license": "MIT",
   "devDependencies": {
